--- a/index.html
+++ b/index.html
@@ -44,203 +44,205 @@
         <p>2008-2024 © Zomato™ Ltd. All rights reserved.</p>
       </div>
     </div>
-    <header>
-      <button class="Hamburger">
-        <i class="fa-solid fa-bars"></i>
-      </button>
-      <nav>
-        <a href=""><i class="fa-regular fa-thumbs-up"></i>Get the app</a>
-        <ul>
-          <li>Investors Relation</li>
-          <li>Add restaurant</li>
-          <li>Sign up</li>
-          <li>Log in</li>
-        </ul>
-      </nav>
-      <img
-        src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png"
-        alt=""
-      />
-      <h1>Discover the best food & drinks in Hyderabad</h1>
-      <div class="search-bar-wrapper">
-        <div class="inputSearch">
-          <i class="fa-solid fa-location-dot"></i>
-          <input class="location" type="text" placeholder="Hyedrabad" />
-          <i class="fa-solid fa-caret-down"></i>
-          <i class="fa-solid fa-magnifying-glass"></i>
-          <input
-            type="text"
-            class="cusine-search"
-            placeholder="Search for restaurant, cusine or a dish"
-          />
-        </div>
-        <div class="location-dropdown">
-          <i class="fa-solid fa-location-crosshairs"></i>
-          <p>
-            Detect Current Location <br />
-            <span>using GPS</span>
-          </p>
-        </div>
-      </div>
-    </header>
-
-    <section id="home-page">
-      <section id="Discover"></section>
-
-      <section id="Collections">
-        <h1>Collections</h1>
-        <div class="collections-detail">
-          <span
-            >Explore curated lists of top restaurants, cafes, pubs, and bars in
-            Hyderabad, based on trends</span
-          >
-          <a href="/">
-            All collections in Hyderabad <i class="fa-solid fa-caret-up"></i
-          ></a>
-        </div>
-        <div class="collection-cards"></div>
-      </section>
-
-      <section id="locations">
-        <h1>Popular localities in and around <span>Hyderabad</span></h1>
-        <div class="location-options"></div>
-      </section>
-    </section>
-
-    <section id="download-zomato">
-      <img
-        src="https://b.zmtcdn.com/data/o2_assets/f773629053b24263e69f601925790f301680693809.png"
-        alt=""
-      />
-      <div class="form">
-        <h1>Get the Zomato app</h1>
-        <p>
-          We will send you a link, open it on your phone to <br />
-          download the app
-        </p>
-        <div class="form-choice">
-          <div class="radio Email"><div></div></div>
-          <span>Email</span>
-          <div class="radio Phone"><div></div></div>
-          <span>Phone</span>
-        </div>
-        <div class="Get-Link">
-          <div class="search-bar">
-            <input type="text" class="Enter-Email" placeholder="Email" />
-          </div>
-          <button>Share App Link</button>
-        </div>
-
-        <p style="font-size: small; margin-bottom: rem">download app form</p>
-        <div class="download-choice">
-          <button></button>
-          <button></button>
-        </div>
-      </div>
-    </section>
-
-    <section id="Explore-options">
-      <h1>Explore options near me</h1>
-      <div class="option-list"></div>
-    </section>
-
-    <footer>
-      <div class="footer-row1">
+    <div class="web-page">
+      <header>
+        <button class="Hamburger">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+        <nav>
+          <a href=""><i class="fa-regular fa-thumbs-up"></i>Get the app</a>
+          <ul>
+            <li>Investors Relation</li>
+            <li>Add restaurant</li>
+            <li>Sign up</li>
+            <li>Log in</li>
+          </ul>
+        </nav>
         <img
-          src="https://b.zmtcdn.com/web_assets/b40b97e677bc7b2ca77c58c61db266fe1603954218.png?fit=around|198:42&crop=198:42;*,*"
+          src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png"
           alt=""
         />
-        <div class="country-language">
-          <div>
-            <div class="country-opt selection hidden">
-              <button class="India"> <img src="https://tse2.mm.bing.net/th?id=OIP.h1NSz4FHs2HQHGo2x1emHAHaEo&pid=Api&P=0&h=180" height="15px" width="20px" alt=""> India</button>
-              <button class="UAE"><img src="https://static.vecteezy.com/system/resources/previews/005/567/896/original/uae-flag-icon-the-flag-of-the-united-arab-emirates-free-vector.jpg" height="15px" width="20px" alt=""> UAE</button>
-            </div>
-            <div class="extra1 hidden"></div>
-            <button class="country select-btn"><img src="https://tse2.mm.bing.net/th?id=OIP.h1NSz4FHs2HQHGo2x1emHAHaEo&pid=Api&P=0&h=180" height="15px" width="20px" alt=""> India</button>
+        <h1>Discover the best food & drinks in Hyderabad</h1>
+        <div class="search-bar-wrapper">
+          <div class="inputSearch">
+            <i class="fa-solid fa-location-dot"></i>
+            <input class="location" type="text" placeholder="Hyedrabad" />
+            <i class="fa-solid fa-caret-down"></i>
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input
+              type="text"
+              class="cusine-search"
+              placeholder="Search for restaurant, cusine or a dish"
+            />
           </div>
-          <div>
-            <div class="languages-opt selection hidden ">
-              <button class="hindi">हिंदी</button>
-              <button class="english">English</button>
-              <button class="french">Français</button>
-              <button class="spanish">Español</button>
-              <button class="mandarin">Mandarin Chinese</button>
-              <button class="japanese">Japanese</button>
-              <button class="arabic">Arabic</button>
-              <button class="portuguese">Português</button>
-              <button class="german">German</button>
-              <button class="russian">Russian</button>
-              <button class="italian">Italian</button>
-              <button class="bengali">Bengali</button>
-            </div>
-            <div class="extra2 hidden "></div>
-            <button id="languages"  class="language select-btn"><img src="https://tse3.mm.bing.net/th?id=OIP.fPbc6WY2EeP7Ac334_bSfwHaHx&pid=Api&P=0&h=180" height="20px" width="20px" alt=""> English</button>
+          <div class="location-dropdown">
+            <i class="fa-solid fa-location-crosshairs"></i>
+            <p>
+              Detect Current Location <br />
+              <span>using GPS</span>
+            </p>
           </div>
         </div>
-      </div>
-
-      <div class="footer-row2">
-        <div class="footer-grid-container">
-          <div>
-            <p>ABOUT ZOMATO</p>
-            <ul>
-            <li>Who We Are</li>
-            <li>Blog</li>
-            <li>Work with us</li>
-            <li>Investor Relations</li>
-            <li>Report Fraud</li>
-            <li>Press Kit</li>
-            <li>Contact us</li>
-          </ul>
+      </header>
+  
+      <section id="home-page">
+        <section id="Discover"></section>
+  
+        <section id="Collections">
+          <h1>Collections</h1>
+          <div class="collections-detail">
+            <span
+              >Explore curated lists of top restaurants, cafes, pubs, and bars in
+              Hyderabad, based on trends</span
+            >
+            <a href="/">
+              All collections in Hyderabad <i class="fa-solid fa-caret-up"></i
+            ></a>
           </div>
-          <div>
-            <p>ZOMATOVERSE</p>
-            <ul>
-              <li>Zomato</li>
-              <li>Blinkit</li>
-              <li>Feeding India</li>
-              <li>Hyperpure</li>
-              <li>Zoomland</li>
-            </ul>
+          <div class="collection-cards"></div>
+        </section>
+  
+        <section id="locations">
+          <h1>Popular localities in and around <span>Hyderabad</span></h1>
+          <div class="location-options"></div>
+        </section>
+      </section>
+  
+      <section id="download-zomato">
+        <img
+          src="https://b.zmtcdn.com/data/o2_assets/f773629053b24263e69f601925790f301680693809.png"
+          alt=""
+        />
+        <div class="form">
+          <h1>Get the Zomato app</h1>
+          <p>
+            We will send you a link, open it on your phone to <br />
+            download the app
+          </p>
+          <div class="form-choice">
+            <div class="radio Email"><div></div></div>
+            <span>Email</span>
+            <div class="radio Phone"><div></div></div>
+            <span>Phone</span>
           </div>
-          <div>
-            <p>FOR RESTAURANTS</p>
-            <ul>
-              <li>Partner with us</li>
-              <li>Apps For You</li>
-            </ul>
-          </div>
-          <div>
-            <p>LEARN MORE</p>
-            <ul>
-              <li>Privacy</li>
-              <li>Security</li>
-              <li>Terms</li>
-              <li>Sitemap</li>
-            </ul>
-          </div>
-
-          <div class="links">
-            <p>SOCIAL LINKS</p>
-            <div class="social-links">
-              <button class="social-pg"></button>
-              <button class="social-pg"></button>
-              <button class="social-pg"></button>
-              <button class="social-pg"></button>
-              <button class="social-pg"></button>
+          <div class="Get-Link">
+            <div class="search-bar">
+              <input type="text" class="Enter-Email" placeholder="Email" />
             </div>
-            <div class="download-choice column">
-              <button></button>
-              <button></button>
+            <button>Share App Link</button>
+          </div>
+  
+          <p style="font-size: small; margin-bottom: rem">download app form</p>
+          <div class="download-choice">
+            <button></button>
+            <button></button>
+          </div>
+        </div>
+      </section>
+  
+      <section id="Explore-options">
+        <h1>Explore options near me</h1>
+        <div class="option-list"></div>
+      </section>
+  
+      <footer>
+        <div class="footer-row1">
+          <img
+            src="https://b.zmtcdn.com/web_assets/b40b97e677bc7b2ca77c58c61db266fe1603954218.png?fit=around|198:42&crop=198:42;*,*"
+            alt=""
+          />
+          <div class="country-language">
+            <div>
+              <div class="country-opt selection hidden">
+                <button class="India"> <img src="https://tse2.mm.bing.net/th?id=OIP.h1NSz4FHs2HQHGo2x1emHAHaEo&pid=Api&P=0&h=180" height="15px" width="20px" alt=""> India</button>
+                <button class="UAE"><img src="https://static.vecteezy.com/system/resources/previews/005/567/896/original/uae-flag-icon-the-flag-of-the-united-arab-emirates-free-vector.jpg" height="15px" width="20px" alt=""> UAE</button>
+              </div>
+              <div class="extra1 hidden"></div>
+              <button class="country select-btn"><img src="https://tse2.mm.bing.net/th?id=OIP.h1NSz4FHs2HQHGo2x1emHAHaEo&pid=Api&P=0&h=180" height="15px" width="20px" alt=""> India</button>
+            </div>
+            <div>
+              <div class="languages-opt selection hidden ">
+                <button class="hindi">हिंदी</button>
+                <button class="english">English</button>
+                <button class="french">Français</button>
+                <button class="spanish">Español</button>
+                <button class="mandarin">Mandarin Chinese</button>
+                <button class="japanese">Japanese</button>
+                <button class="arabic">Arabic</button>
+                <button class="portuguese">Português</button>
+                <button class="german">German</button>
+                <button class="russian">Russian</button>
+                <button class="italian">Italian</button>
+                <button class="bengali">Bengali</button>
+              </div>
+              <div class="extra2 hidden "></div>
+              <button id="languages"  class="language select-btn"><img src="https://tse3.mm.bing.net/th?id=OIP.fPbc6WY2EeP7Ac334_bSfwHaHx&pid=Api&P=0&h=180" height="20px" width="20px" alt=""> English</button>
             </div>
           </div>
         </div>
-        <div></div>
-      </div>
-      <hr>
-      <span>By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies. All trademarks are properties of their respective owners. 2008-2024 © Zomato™ Ltd. All rights reserved.</span>
-    </footer>
+  
+        <div class="footer-row2">
+          <div class="footer-grid-container">
+            <div>
+              <p>ABOUT ZOMATO</p>
+              <ul>
+              <li>Who We Are</li>
+              <li>Blog</li>
+              <li>Work with us</li>
+              <li>Investor Relations</li>
+              <li>Report Fraud</li>
+              <li>Press Kit</li>
+              <li>Contact us</li>
+            </ul>
+            </div>
+            <div>
+              <p>ZOMATOVERSE</p>
+              <ul>
+                <li>Zomato</li>
+                <li>Blinkit</li>
+                <li>Feeding India</li>
+                <li>Hyperpure</li>
+                <li>Zoomland</li>
+              </ul>
+            </div>
+            <div>
+              <p>FOR RESTAURANTS</p>
+              <ul>
+                <li>Partner with us</li>
+                <li>Apps For You</li>
+              </ul>
+            </div>
+            <div>
+              <p>LEARN MORE</p>
+              <ul>
+                <li>Privacy</li>
+                <li>Security</li>
+                <li>Terms</li>
+                <li>Sitemap</li>
+              </ul>
+            </div>
+  
+            <div class="links">
+              <p>SOCIAL LINKS</p>
+              <div class="social-links">
+                <button class="social-pg"></button>
+                <button class="social-pg"></button>
+                <button class="social-pg"></button>
+                <button class="social-pg"></button>
+                <button class="social-pg"></button>
+              </div>
+              <div class="download-choice column">
+                <button></button>
+                <button></button>
+              </div>
+            </div>
+          </div>
+          <div></div>
+        </div>
+        <hr>
+        <span>By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies. All trademarks are properties of their respective owners. 2008-2024 © Zomato™ Ltd. All rights reserved.</span>
+      </footer>
+    </div>
     <script src="/scripts/index.js"></script>
   </body>
 </html>
